Fix overflow on tiles

--- a/app/assets/stylesheets/modules/_develop.scss
+++ b/app/assets/stylesheets/modules/_develop.scss
@@ -3178,6 +3178,7 @@ section.duplicate-candidates {
     .translatable-field-container {
       flex: auto;
       width: 100%;
+      overflow-wrap: break-word;
     }
   }
 }
